--- a/vue/package.json
+++ b/vue/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.24.4",
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
     "crypto-js": "^4.0.0",
     "element-ui": "^2.15.14",
+    "md5": "^2.3.0",
     "vue": "^2.6.14",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.5.1",
@@ -19,7 +21,7 @@
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
+    "@babel/core": "^7.24.4",
     "@babel/eslint-parser": "^7.12.16",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
